# zgbc

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  build.zig
benchmarks/: audit_pokegym.py  compare_pyboy.py  env_benchmark.py
bindings/python/: README.md  pyproject.toml
bindings/python/src/pokegym/: __init__.py
bindings/python/src/zgbc/: __init__.py  pokegym.py  pokegym_env.py  pokemon_env.py  ram_map.py
bindings/python/src/zgbc/statepack/: Bulbasaur.state  README.md  __init__.py
include/: zgbc.h
scripts/: compare_training_speed.py
src/: bench.zig  c_api.zig  core.zig  gb.zig  main.zig  mbc.zig  mmu.zig  ppu.zig  root.zig  simd_batch.zig  wasm.zig
src/gb/: apu.zig  cpu.zig  mbc.zig  ppu.zig  system.zig  timer.zig
src/genesis/: bus.zig  cpu.zig  psg.zig  root.zig  system.zig  vdp.zig  ym2612.zig  z80.zig
src/nes/: apu.zig  mapper.zig  mmu.zig  ppu.zig  system.zig
src/sms/: bus.zig  cpu.zig  psg.zig  system.zig  vdp.zig
test/: battletoads_test.zig  genesis_test.zig  m68k_json_test.zig  m68k_test.zig  sms_audio_debug.zig  sms_debug.zig  sms_visual_test.zig  zexall_test.zig
web/: index.html  zgbc.wasm
